--- a/css/style.css
+++ b/css/style.css
@@ -676,9 +676,12 @@ aside .pages {
 .hero {
     background-image: linear-gradient(0deg, #1507259c 0.5%, #1b1b1bc5 100%), url("../Images/bg/hero3.png");
     background-size: cover;
+    display: flex;
     background-position: center;
+    align-items: center;
+    justify-content: center !important;
     background-repeat: no-repeat;
-    padding: 40px 0 80px 0;
+    padding: auto 0 auto 0;
     height: 80vh !important;
 }
 
@@ -740,7 +743,7 @@ aside .pages {
 
 .hero h3 {
     color: #ffffff;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 .center-btn {
