fixed image rendering

--- a/css/style.css
+++ b/css/style.css
@@ -1498,7 +1498,7 @@ aside .pages {
 /* ====== 1.12. FAQ section ====== */
 
 .faq {
-    background-image: url("../Images/bg/hero.png");
+    background-image: url("../Images/bg/hero.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
